# zuli

./: .gitignore  LICENSE  README.md  argparsei.py  pyproject.toml  smartplug.py  zcs.py  zuli.py
src/zuli/: __init__.py  __main__.py  protocol.py  smartplug.py  zuli.py
